# Conserva

./: .gitignore  Cargo.toml  PARAMETERS.md  README.md  TODO.md  visualizer.py
crates/cp_export/: Cargo.toml
crates/cp_export/src/: main.rs
crates/digital_twin/: Cargo.toml
crates/digital_twin/benches/: step_benchmark.rs
crates/digital_twin/src/: defaults.rs  design.rs  flight_computer.rs  lib.rs  mesh_generation.rs  parameters.rs  rocket.rs  rocket_ctrl.rs  solver.rs
crates/digital_twin_glue/: Cargo.toml
crates/digital_twin_glue/src/: digital_twin.rs  lib.rs
crates/digital_twin_glue/src/control/: flight_computer.rs  mod.rs  rocket.rs  state.rs
crates/digital_twin_glue/src/geometry/: config.rs  mesh.rs  mod.rs
crates/digital_twin_glue/src/integ/: mod.rs  rk4.rs
crates/digital_twin_glue/src/physics/: mod.rs  solver.rs
crates/digital_twin_glue/src/rocket/: configuration.rs  mesh.rs  mod.rs  state.rs
crates/mesh_export/: Cargo.toml
crates/mesh_export/src/: main.rs
crates/tuner/: Cargo.toml
crates/tuner/src/: lib.rs  main.rs
src/: main.rs
